# safecoin-token-registry

client/: initRegistry.js  package.json.bak
client/src/: Application.tsx.bak
js/: package.json.bak
js/src/__tests__/: createentry.test.ts.bak  fuzz.test.ts.bak  transfertokenauthority.test.ts  utils.ts.bak
program/: Cargo.toml  package.json
scripts/: final-deploy.sh
